// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart checkout should return an object with the total and the list of items 1`] = `
{
  "items": [
    {
      "product": {
        "price": 35388,
        "title": "adidas tênis - masculino",
      },
      "quantity": 2,
    },
    {
      "product": {
        "price": 41872,
        "title": "adidas tênis - feminino",
      },
      "quantity": 3,
    },
  ],
  "total": {
    "amount": 196392,
    "currency": "BRL",
    "precision": 2,
  },
}
`;

exports[`Cart checkout should return an object with the total and the list of items when summary() is called 1`] = `
{
  "formatted": "R$1,963.92",
  "items": [
    {
      "product": {
        "price": 35388,
        "title": "adidas tênis - masculino",
      },
      "quantity": 2,
    },
    {
      "product": {
        "price": 41872,
        "title": "adidas tênis - feminino",
      },
      "quantity": 3,
    },
  ],
  "total": {
    "amount": 196392,
    "currency": "BRL",
    "precision": 2,
  },
}
`;
